--- a/src/test/javafx/view/JavaFXTestDrive.fxml
+++ b/src/test/javafx/view/JavaFXTestDrive.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="377.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.javafx.view.JavaFXController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="610.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.javafx.view.JavaFXController">
    <bottom>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -50,21 +50,21 @@
       </GridPane>
    </bottom>
    <center>
-      <SplitPane dividerPositions="0.375" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+      <SplitPane dividerPositions="0.375" orientation="VERTICAL" prefHeight="579.0" prefWidth="599.0" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane maxHeight="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="140.0" prefWidth="725.0">
                <children>
-                  <TabPane layoutX="-1.0" prefHeight="168.0" prefWidth="727.0" tabClosingPolicy="UNAVAILABLE">
+                  <TabPane layoutX="-1.0" prefHeight="135.0" prefWidth="727.0" tabClosingPolicy="UNAVAILABLE">
                     <tabs>
                       <Tab text="JSON Delivery">
                         <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="93.0" prefWidth="663.0">
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="51.0" prefWidth="727.0">
                                  <children>
                                     <TextField layoutX="116.0" layoutY="27.0" prefHeight="26.0" prefWidth="107.0" text="25.12.56.47" />
                                     <Text layoutX="23.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Destination IP : " />
                                     <TextField layoutX="116.0" layoutY="57.0" prefHeight="26.0" prefWidth="107.0" text="5152" />
                                     <Text layoutX="23.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Port : " />
-                                    <ToggleButton layoutX="386.0" layoutY="23.0" mnemonicParsing="false" onMouseClicked="#clickReceiveButton" prefHeight="61.0" prefWidth="110.0" text="Receving Data" />
+                                    <ToggleButton layoutX="385.0" layoutY="23.0" mnemonicParsing="false" onMouseClicked="#clickReceiveButton" prefHeight="61.0" prefWidth="110.0" stylesheets="@buttonStyle.css" text="Receving Data" />
                                     <ToggleButton layoutX="518.0" layoutY="23.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="110.0" text="Sending Data" />
                                  </children>
                               </AnchorPane>
@@ -72,18 +72,18 @@
                       </Tab>
                       <Tab text="TBD">
                         <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="24.0" prefWidth="727.0" />
                         </content>
                       </Tab>
                     </tabs>
                   </TabPane>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="157.0" prefWidth="725.0">
                <children>
-                  <ScrollPane layoutY="-9.0" prefHeight="222.0" prefWidth="727.0">
+                  <ScrollPane layoutY="-9.0" prefHeight="441.0" prefWidth="727.0">
                      <content>
-                        <TableView fx:id="aircraftTable" prefHeight="220.0" prefWidth="723.0">
+                        <TableView fx:id="aircraftTableView" prefHeight="439.0" prefWidth="723.0">
                           <columns>
                             <TableColumn fx:id="column1" prefWidth="176.0" sortType="DESCENDING" text="Time" />
                             <TableColumn fx:id="column2" prefWidth="98.0" text="ICAO24" />
@@ -92,6 +92,7 @@
                               <TableColumn fx:id="column5" prefWidth="96.0" text="Longitude" />
                               <TableColumn fx:id="column6" minWidth="1.0" prefWidth="83.0" text="Altitude" />
                               <TableColumn fx:id="column7" prefWidth="63.0" text="Speed" />
+                              <TableColumn fx:id="column8" prefWidth="75.0" text="isNew" visible="false" />
                           </columns>
                         </TableView>
                      </content>
