--- a/src/test/javafx/view/JavaFXTestDrive.fxml
+++ b/src/test/javafx/view/JavaFXTestDrive.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="610.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.javafx.view.JavaFXController">
+<BorderPane maxHeight="610.0" maxWidth="727.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="610.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.javafx.view.JavaFXController">
    <bottom>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -85,14 +85,14 @@
                      <content>
                         <TableView fx:id="aircraftTableView" prefHeight="439.0" prefWidth="723.0">
                           <columns>
-                            <TableColumn fx:id="column1" prefWidth="176.0" sortType="DESCENDING" text="Time" />
-                            <TableColumn fx:id="column2" prefWidth="98.0" text="ICAO24" />
-                              <TableColumn fx:id="column3" prefWidth="91.0" text="Flight ID" />
-                              <TableColumn fx:id="column4" prefWidth="110.0" text="Latitude" />
-                              <TableColumn fx:id="column5" prefWidth="96.0" text="Longitude" />
-                              <TableColumn fx:id="column6" minWidth="1.0" prefWidth="83.0" text="Altitude" />
-                              <TableColumn fx:id="column7" prefWidth="63.0" text="Speed" />
-                              <TableColumn fx:id="column8" prefWidth="75.0" text="isNew" visible="false" />
+                            <TableColumn fx:id="column1" editable="false" prefWidth="176.0" sortable="false" text="Time" />
+                            <TableColumn fx:id="column2" editable="false" prefWidth="98.0" sortable="false" text="ICAO24" />
+                              <TableColumn fx:id="column3" editable="false" prefWidth="91.0" sortable="false" text="Flight ID" />
+                              <TableColumn fx:id="column4" editable="false" prefWidth="110.0" sortable="false" text="Latitude" />
+                              <TableColumn fx:id="column5" editable="false" prefWidth="96.0" sortable="false" text="Longitude" />
+                              <TableColumn fx:id="column6" editable="false" minWidth="1.0" prefWidth="83.0" sortable="false" text="Altitude" />
+                              <TableColumn fx:id="column7" editable="false" prefWidth="63.0" sortable="false" text="Speed" />
+                              <TableColumn fx:id="column8" editable="false" prefWidth="75.0" sortable="false" text="isNew" visible="false" />
                           </columns>
                         </TableView>
                      </content>
