Deliver : Reset update Xml : Schema V6

--- a/src/test/javafx/view/JavaFXTestDrive.fxml
+++ b/src/test/javafx/view/JavaFXTestDrive.fxml
@@ -82,7 +82,7 @@
                                  </children></AnchorPane>
                         </content>
                       </Tab>
-                      <Tab text="TBD">
+                      <Tab text="UDP Relay">
                       	<content>
                       		<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="24.0" prefWidth="727.0">
                       		<children>
